tests/ui/error-codes/E0478.stderr
error[E0478]: lifetime bound not satisfied
  --> $DIR/E0478.rs:4:12
   |
LL |     child: Box<dyn Wedding<'kiss> + 'SnowWhite>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: lifetime parameter instantiated with the lifetime `'SnowWhite` as defined here
  --> $DIR/E0478.rs:3:22
   |
LL | struct Prince<'kiss, 'SnowWhite> {
   |                      ^^^^^^^^^^
note: but lifetime parameter must outlive the lifetime `'kiss` as defined here
  --> $DIR/E0478.rs:3:15
   |
LL | struct Prince<'kiss, 'SnowWhite> {
   |               ^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0478`.
